Finalna verzija local: popravljen chart i swagger
